[package]
name = "rc5librs"
version = "0.1.0"
edition = "2021"
authors = ["Andriy <yamukha@ukr.net>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#test-env-log = "0.2.8"
test-log = "0.2.10"

[dev-dependencies]
env_logger = "*"
tracing = {version = "0.1", default-features = false}
tracing-subscriber = {version = "0.3", default-features = false, features = ["env-filter", "fmt"]}

[profile.dev]
# overflow-checks = false
